--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-  <title>Ecological Conservation Red Line</title>
+  <title>Ecological Conservation Redline</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
@@ -163,7 +163,7 @@ function zoomTo(arg) {
 	};
 
 	var GMUS_Layers = {
-			"ECRL": my_redline,
+			"ECR": my_redline,
 			"Ecological corridor":my_corridor,
 			"Stepping stone ": my_stone,
 		    	"Admin division": my_admin
