--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="map" class="map">
       	<div id="download_icon"><a href="#" onClick="alert('Dear visitor,' + '\n' +
 							   '\n' + 'Thank you for your interest in this dataset!' + '\n' +
-							   '\n' + 'It will be available upon acceptance of our manuscript! For further information, please contact us (mengmeng.li@zju.edu.cn).' + '\n' +
+							   '\n' + 'It will be available upon acceptance of our manuscript! For further information, please contact our team (mengmeng.li@zju.edu.cn).' + '\n' +
                                                                                                                    '\n' + 'Department of Land Management, Zhejiang University' +
 							   '\n' + 'Institute for Environmental Studies, VU University Amsterdam')";><img src="img/download_icon.png"></a></div>
 
