--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                                                                                                    '\n' + 'Department of Land Management, Zhejiang University' +
 							   '\n' + 'Institute for Environmental Studies, VU University Amsterdam')";><img src="img/download_icon.png"></a></div>
 
-	<div id="homepage"><a href="#"><img src="img/homepage.png"></a></div>
+	<div id="homepage"><a href="https://landbigdata.github.io/cscproject/"><img src="img/homepage.png"></a></div>
 
 	<div id="revolvermaps"><img src="https://rf.revolvermaps.com/w/3/s/a/0/33/0/ffffff/010020/aa0000/5u0yvc9fwb5.png"></div>
 
