--- a/index - Copy.html
+++ b/index - Copy.html
@@ -37,7 +37,11 @@
 <body>
     <div class="mapper no-padding">
       <div id="map" class="map">
-      	<div id="download_icon"><a href="https://doi.org/10.6084/m9.figshare.21600882"> <img src="img/download_icon.png"></a></div>
+      	<div id="download_icon"><a href="#" onClick="alert('Dear visitor,' + '\n' +
+							   '\n' + 'Thank you for your interest in this dataset!' + '\n' +
+							   '\n' + 'It will be available upon acceptance of our manuscript! For further information, please contact our team (anonymous@xx.xx).' + '\n' +
+                                                                                                                   '\n' + 'Department of Land Management, Zhejiang University' +
+							   '\n' + 'Institute for Environmental Studies, VU University Amsterdam')";><img src="img/download_icon.png"></a></div>
 
 	<div id="homepage"><a href="https://landbigdata.github.io/cscproject/"><img src="img/homepage.png"></a></div>
 
