--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <body>
     <div class="mapper no-padding">
       <div id="map" class="map">
-      	<div id="download_icon"><a href="https://doi.org/10.6084/m9.figshare.21600882"> <img src="img/download_icon.png"></a></div>
+      	<div id="download_icon"><a href="https://doi.org/10.6084/m9.figshare.21600882" target="_blank"> <img src="img/download_icon.png"></a></div>
 
-	<div id="homepage"><a href="https://landbigdata.github.io/cscproject/"><img src="img/homepage.png"></a></div>
+	<div id="homepage"><a href="https://landbigdata.github.io/cscproject/" target="_blank"><img src="img/homepage.png"></a></div>
 
 	<div id="revolvermaps"><img src="https://rf.revolvermaps.com/w/3/s/a/0/33/0/ffffff/010020/aa0000/5u0yvc9fwb5.png"></div>
 
