--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <div class="mapper no-padding">
       <div id="map" class="map">
-      	<div id="download_icon"><a href="https://figshare.com/ndownloader/files/38283690"> <img src="img/download_icon.png"></a></div>
+      	<div id="download_icon"><a href="https://doi.org/10.6084/m9.figshare.21600882" target="_blank"> <img src="img/download_icon.png"></a></div>
 
 	<div id="homepage"><a href="https://landbigdata.github.io/cscproject/" target="_blank"><img src="img/homepage.png"></a></div>
 
